force-app/main/default/objects/K10p__c/K10p__c.object-meta.xml
<CustomObject>
    <description>PMHC MDS requires the use of one of the following three required measures, as follows:

For adults (18+ years) - Kessler Psychological Distress Scale (K10+) is the prescribed measure, with the option to use the K5 for Aboriginal and Torres Strait Islander people if that is considered more appropriate.
For children and young people (up to and including 17 years) - the Strengths &amp; Difficulties Questionnaires (SDQ) is the prescribed tool. The specified versions include the parent-report for 4-10 years and 11-17 years; and the self-report for 11-17 years.</description>
    <label>K10+</label>
    <nameField>
        <label>K10p Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>K10s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>