force-app/main/default/objects/K10p__c/fields/K10_Question_14__c.field-meta.xml
<CustomField>
    <fullName>K10_Question_14__c</fullName>
    <label>K10+ - Question 14</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	None of the time</fullName>
            </value>
            <value>
                <fullName>2:	A little of the time</fullName>
            </value>
            <value>
                <fullName>3:	Some of the time</fullName>
            </value>
            <value>
                <fullName>4:	Most of the time</fullName>
            </value>
            <value>
                <fullName>5:	All of the time</fullName>
            </value>
            <value>
                <fullName>9:	Not stated / Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>