force-app/main/default/objects/K10p__c/fields/k10p_score__c.field-meta.xml
<CustomField>
    <fullName>k10p_score__c</fullName>
    <label>K10+ - Score</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>