force-app/main/default/objects/K10p__c/fields/k10p_tags__c.field-meta.xml
<CustomField>
    <fullName>k10p_tags__c</fullName>
    <description>List of tags for the measure.</description>
    <label>K10+ - Tags</label>
    <length>11</length>
    <type>Text</type>
</CustomField>